# MyFantasticToolkit

./: .gitignore  HSBC Little Worker.spec  README.md  README_en.md  main.py  project_structure.md  pyproject.toml  requirements.txt
Little Worker/: .gitignore  HSBC Little Worker.spec  README.md  README_en.md  copy_py_to_txt.txt  main.txt
Little Worker/core/: __init__.txt  main_window.txt  plugin_manager.txt  plugin_manager_dialog.txt  settings_dialog.txt
Little Worker/plugins/comparison_variance_report/: __init__.txt
Little Worker/plugins/demo_plugin/: __init__.txt  config.json
Little Worker/plugins/little_capturer/: README.md
Little Worker/plugins/ollama_vision/: __init__.txt
Little Worker/plugins/period_variance_report/: static_values.txt
Little Worker/plugins/support_web_toolkit/: __init__.txt  archived_todos.json  common.txt  config.json  streamlit_app.txt
Little Worker/resources/translations/: zh_CN.json
config/: app_config.json  plugin_config.json  settings.py
core/: application.py  i18n.py  main_window.py  plugin_base.py  plugin_manager.py  plugin_manager_dialog.py  settings_dialog.py
core/styles/: base.qss  dark_theme.qss  light_theme.qss
docs/: LittleCapturer.md  Plugin-Dev.md  comparison_variance_report.md  little-capturer.md  period_variance_report.md  plugin_development.md  project_structure.md  streamlit-toolkit.md
plugins/: __init__.py  plugin_config.json
plugins/batch_monitor/: __init__.py  config.json
plugins/batch_monitor/translations/: en_US.json  zh_CN.json
plugins/comparison_variance_report/: __init__.py  config.json
plugins/comparison_variance_report/reports/: CVR_2025-07-31_25081411.docx  CVR_2025-07-31_25081411.html  CVR_2025-07-31_25081416.html
plugins/comparison_variance_report/translations/: en_US.json  zh_CN.json
plugins/demo_plugin/: __init__.py  config.json
plugins/demo_plugin/translations/: en_US.json  zh_CN.json
plugins/little_capturer/: LittleCapturer.py  __init__.py  config.json
plugins/little_capturer/translations/: en_US.json
plugins/little_capturer/utils/: hotkey_manager.py  image_processor.py  screenshot.py
plugins/ollama_vision/: config.json
plugins/ollama_vision/translations/: en_US.json  zh_CN.json
plugins/period_variance_report/: __init__.py  config.json
plugins/period_variance_report/reports/: period_variance_report_20250905_122725.csv  period_variance_report_20250905_144019.csv  period_variance_report_20250905_144544.csv  period_variance_report_20250905_145533.csv  period_variance_report_20250905_145607.csv  period_variance_report_20250905_150049.csv
plugins/period_variance_report/translations/: en_US.json  zh_CN.json
plugins/support_web_toolkit/: __init__.py  archived_todos.json  common.py  config.json  libre_cmd.json  streamlit_app.py
resources/translations/: en_US.json  zh_CN.json
utils/: config_manager.py  crypto.py  logger.py  path_manager.py
(+16 files in other folders)
