[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsbc-little-worker"
version = "1.0.0"
description = "HSBC Little Worker - 个人工作小工具集合"
authors = [
    {name = "HSBC IT Support", email = "it-support@hsbc.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]

dependencies = [
    "pyside6>=6.5.0",
    "marko>=2.0.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "keyboard>=0.13.5",
    "psutil>=5.9.0",
    "pynput>=1.8.1",
    "streamlit>=1.40.1",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

ocr = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0"
]

[project.urls]
Homepage = "https://github.com/hsbc/little-worker"
Repository = "https://github.com/hsbc/little-worker.git"
Issues = "https://github.com/hsbc/little-worker/issues"

[project.scripts]
hsbc-little-worker = "main:main"

[tool.setuptools.packages.find]
where = ["."]  # 在当前目录查找包
include = ["core*", "plugins*", "utils*", "config*", "resources*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.svg", "*.png", "*.ico", "*.qss", "*.md"]

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
